# anole

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  ChangeLog.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  PROGRESS.md  README.md  Samples.md  codegen.cpp  codegen.h  corefn.cpp  demo.ice  example.ice  grammar  ice.sln  ice.vcxproj  ice.vcxproj.filters  main.cpp  node.h  parser  parser.cpp  parser.hpp  parser.y  tokens.cpp  tokens.l
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ccpp.yml
Source/: lexicalAnalysis.h  main.cpp
anole/: anole.hpp  argparse.hpp  base.hpp  error.cpp  error.hpp  main.cpp  repl.cpp  version.hpp
anole/compiler/: ast.cpp  ast.hpp  code.cpp  code.hpp  codegen.cpp  compiler.hpp  instruction.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
anole/objects/: boolobject.cpp  boolobject.hpp  builtinfuncobject.cpp  builtinfuncobject.hpp  classobject.cpp  classobject.hpp  contobject.cpp  contobject.hpp  dictobject.cpp  dictobject.hpp  enumobject.cpp  enumobject.hpp  floatobject.cpp  floatobject.hpp  funcobject.cpp  funcobject.hpp  instanceobject.cpp  instanceobject.hpp  integerobject.cpp  integerobject.hpp  listobject.cpp  listobject.hpp  methodobject.cpp  methodobject.hpp  moduleobject.cpp  moduleobject.hpp  noneobject.cpp  object.cpp  object.hpp  objects.hpp  stringobject.cpp  stringobject.hpp  thunkobject.cpp  thunkobject.hpp
anole/runtime/: builtins.cpp  collector.cpp  collector.hpp  context.cpp  context.hpp  runtime.hpp  scope.cpp  scope.hpp  variable.hpp
example/: chunch.ice  chunck.ice  church.anole  class.anole  class.ice  codemo.icec  continuation.ice  coroutine.ice  custom_op.anole  default-arguments.ice  delay_expr.ice  enum.anole  enum.ice  env_args.anole  eval.anole  foreach.anole  foreach.icec  guess_number.ice  list.anole  list.ice  list.icec  map.anole  map.ice  math.anole  math.ice  monad.anole  multiretval.anole  pair.ice  reference.anole  stream.anole  test.sh  the yin-yang puzzle.ice  tree.anole  tree.ice  tree.icec  try-catch.anole  try-catch.ice  try-catch.icec  variadic_args.anole
example/parsec/: demo.anole
example/parsec/parsec/: __init__.anole  parsec.anole
grammar/: grammar
ice/: Makefile  grammar  ice.sln  ice.vcxproj  ice.vcxproj.filters
ice/include/: Coderun.h  Ice.h  IceObject.h  Interpreter.h  LexicalAnalyzer.h  Node.h  Object.h  SyntaxAnalyzer.h  Token.h  interpreter.h  parser.h  tokens.h
ice/src/: Coderun.cpp  IceObject.cpp  Interpreter.cpp  LexicalAnalyzer.cpp  Object.cpp  SyntaxAnalyzer.cpp  Token.cpp  main.cpp  parser.cpp  tokens.cpp
lib/coroutine/: __init__.anole  __init__.icec
lib/env/: __init__.anole  env.cpp
lib/file/: __init__.anole  __init__.ice  fileobject.cpp  fileobject.hpp
lib/os/: __init__.anole
lib/os/path/: __init__.anole  path.cpp  path.hpp
lib/os/read_dir/: __init__.anole  read_dir.cpp
light/: type_traits.hpp  unique_ptr.hpp
source/: parser.cpp  token.cpp  token.hpp
src/: allocator.hpp  anole.hpp  argparse.hpp  ast.hpp  base.hpp  boolobject.cpp  boolobject.hpp  builtin.cpp  builtinfuncobject.cpp  builtinfuncobject.hpp  builtins.cpp  code.cpp  code.hpp  codegen.cpp  collector.cpp  collector.hpp  context.cpp  context.hpp  contobject.cpp  contobject.hpp  dictobject.cpp  dictobject.hpp  enumobject.cpp  enumobject.hpp  error.cpp  error.hpp  floatobject.cpp  floatobject.hpp  frame.cpp  frame.hpp  funcobject.cpp  funcobject.hpp  helper.hpp  instruction.cpp  instruction.hpp  integerobject.cpp  integerobject.hpp  ir.hpp  listobject.cpp  listobject.hpp  (+28 more)
src/base/: any.hpp  utilities.hpp  variant.hpp
src/compiler/: ast.hpp  code.cpp  code.hpp  codegen.cpp  compiler.hpp  instruction.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  tokenizer.cpp
src/objects/: boolobject.cpp  boolobject.hpp  builtinfuncobject.cpp  builtinfuncobject.hpp  classobject.cpp  classobject.hpp  contobject.cpp  contobject.hpp  dictobject.cpp  dictobject.hpp  enumobject.cpp  enumobject.hpp  floatobject.cpp  floatobject.hpp  funcobject.cpp  funcobject.hpp  instanceobject.cpp  instanceobject.hpp  integerobject.cpp  integerobject.hpp  listobject.cpp  listobject.hpp  methodobject.hpp  moduleobject.cpp  moduleobject.hpp  noneobject.cpp  noneobject.hpp  object.cpp  object.hpp  objects.hpp  stringobject.cpp  stringobject.hpp  thunkobject.cpp  thunkobject.hpp
src/runtime/: allocator.hpp  builtins.cpp  collector.cpp  collector.hpp  context.cpp  context.hpp  runtime.hpp  scope.cpp  scope.hpp  variable.hpp
test/: Makefile  TestCodeRuntime.cpp  TestDeclarationAnalyzer.cpp  TestLexicalAnalyzer.cpp  frame-tester.cpp  parser-tester.cpp  sample-tester.cpp  sample-tester.hpp  stdafx.cpp  stdafx.h  test.cpp  test.vcxproj  test.vcxproj.filters  tester.hpp  tokenizer-tester.cpp  tokenizer-tester.hpp  unittest1.cpp  vm-tester.cpp
